--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
   <header>
     <div class="logo">Yah Homes</div>
     <nav id="navLinks">
-      <a href="web.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="#about">About</a>
       <a href="services.html">Services</a>
       <a href="projects.html">Projects</a>
