--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
   <header>
     <div class="logo">BuildSure</div>
     <nav id="navLinks">
-      <a href="web.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="#projects.html">Projects</a>
