--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
   <header>
     <div class="logo">BuildSure</div>
     <nav id="navLinks">
-      <a href="web.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="#services">Services</a>
       <a href="projects.html">Projects</a>
