--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">BuildSure</div>
+    <div class="logo">Yah Homes</div>
     <nav id="navLinks">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
