--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="hero-content">
           <h1>Elevating Skylines, One Dream at a Time</h1>
           <p class="lead">Premium building, architecture, and engineering services tailored to your vision.</p>
-          <a href="#services" class="btn">Explore Our Services</a>
+          <a href="services.html" class="btn">Explore Our Services</a>
         </div>
       </div>
       <div class="swiper-slide" style="background-image:url('https://images.unsplash.com/photo-1570129477492-45c003edd2be?auto=format&fit=crop&w=3840&q=80');">
@@ -55,7 +55,7 @@
         <div class="hero-content">
           <h1>Building Landmarks for the Future</h1>
           <p class="lead">From concept to creation, we bring monumental projects to life.</p>
-          <a href="#projects" class="btn">View Projects</a>
+          <a href="projects.html" class="btn">View Projects</a>
         </div>
       </div>
       </div>
